# cdx-swap

./: .gitignore  CLAUDE.md  README.en.md  README.ko.md  README.md  SECURITY.md  cdx-swap.sln  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  business-rules.md  contracts.md  engineering-notes.md  operations.md  security.md  standards.md
docs/tracking/: findings.md  status.md
installer/: README.md
installer/CdxSwap.Setup/: App.xaml  App.xaml.cs  BuildMetadata.cs  CdxSwap.Setup.csproj  InstallEngine.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
packaging/windows/: Install-CodexUsageTray.cmd  Install-CodexUsageTray.ps1  README.txt
scripts/: package-windows-cross.sh  package-windows.ps1
scripts/cross-tools/: clang-cl  llvm-rc
src/: AGENTS.md  App.tsx  styles.css
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  claude.rs  config.rs  desktop.rs  domain.rs  lib.rs  main.rs  profiles.rs  tray.rs  upstream.rs  usage.rs
src-tauri/src/tray/: event.rs  icon.rs  menu.rs  mod.rs  state.rs  window.rs
src/__tests__/: app-controller-tray.test.tsx  app-model.test.ts  profile-panel.test.tsx  tray-panel-buttons.test.tsx
src/components/: ClaudeUsagePanel.tsx  PanelChrome.tsx  ProfilePanel.tsx  SessionPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  UsageTable.tsx
src/hooks/: useAppController.ts
src/lib/: app-model.ts  native.ts  time.ts
src/styles/: components.css  layout.css  tokens.css
(+9 files in other folders)
