[package]
name = "cdx-swap"
version = "0.1.3"
description = "Windows-first Codex usage tray app"
authors = ["cdx-swap contributors"]
edition = "2021"

[lib]
name = "cdx_swap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
